--- a/mysite/food/templates/food/index.html
+++ b/mysite/food/templates/food/index.html
@@ -79,7 +79,7 @@
       <div class="col-10">
         <div class="container-fluid">
           <div class="row m-2">
-            {% for i in place_nums %}
+            {% comment %} {% for i in place_nums %}
               <div class="col-4 grid-item p-0 m-1">
                 <div class="grid-item-img">
                   <img src="https://picsum.photos/id/684/280/200" alt="">
@@ -87,8 +87,15 @@
                 <label for="">餐廳{{ i }}</label>
               </div>
 
+            {% endfor %} {% endcomment %}
+            {% for store in store_list %}
+            <div class="col-4 grid-item p-0 m-1">
+              <div class="grid-item-img">
+                <img src="https://picsum.photos/id/684/280/200" alt="">
+              </div>
+              <label for="">{{ store.name }}</label>
+            </div>
             {% endfor %}
-
 
           </div>
         </div>
